# casabaldini

./: .project  Cargo.toml  Connect.py  Connectlite.py  README.md  carlozanieri.db  casabaldini  casabaldini.py  casabaldini.sqlite  go.mod  home.html  main.go
beb/: casabaldini.db  models.py  urls.py
beb/migrations/: 0018_slider_codice2.py
beb/templates/beb/: Menu.html  base.html  carousel copy 2.html  carousel copy.html  carousel.html  dovesiamo.html  horizontal-menu.html  index.html  index_ok.html  lasala_frame.html  linkutili.html  master.html  menu5.html  mugello.html
beb/templates/beb/Blue-Slider-master/: index.html  index2.html
beb/templates/beb/camere/: index.html
beb/templates/beb/home/: example4.html  home.html
beb/templates/beb/home/examples/: example4.html
beb/templates/beb/split/: index.html
casabaldini/: settings.py  wsgi.py
cmd/web/: main.go
internal/handlers/: home.go  menu.go
src/: db.rs  main.rs  models.rs  routes.rs
src/ui/: Cargo.toml  _home_._rs_  home.rs
templates/: base.html  blog-master.html  blogmaster.html  header_.html  home.html  home_.html  layout.html  master.html  menu.html
