[package]
name = "casabaldini"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs"] }

dioxus = { version = "0.7.2", features = ["ssr"] }


serde = { version = "1", features = ["derive"] }

sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "macros"
] }

anyhow = "1"
